--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,6 @@ body {
 }
 
 .title {
-  margin: 0 auto 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -327,6 +326,10 @@ body {
   padding: 94px 0;
 }
 
+.team__tittle {
+  margin: 0 auto 50px;
+}
+
 .team__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -400,7 +403,7 @@ body {
 
 .portfolio {
   background: var(--color-bg-light1);
-  padding: 100px 0;
+  padding: 94px 0;
 }
 
 .portfolio__menu {
@@ -438,6 +441,10 @@ body {
 }
 
 .portfolio__element img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
   margin: 0 0 20px 0;
 }
 
